--- a/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
+++ b/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
@@ -10,9 +10,12 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="SyncfusionDocumentation-WASMVersion.styles.css" rel="stylesheet" />
-    <!--<link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />-->
-    <!--CDN-version <link href="https://cdn.syncfusion.com/blazor/23.1.36/styles/bootstrap5.css" options(material3.css, bootstrap5-dark.css etc) rel="stylesheet" />-->
-   <link href="~/themes/syncfusion/blazor-themes/scss-themes/material-dark.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5-dark.css" rel="stylesheet" />
+
+    @*CDN-version -WORKING
+    <link href="https://cdn.syncfusion.com/blazor/23.1.36/styles/bootstrap5.css" rel="stylesheet" /> *@
+    @*LIBMan NOT WORKING
+    <link href="~/themes/syncfusion/blazor-themes/scss-themes/material-dark.css" rel="stylesheet" /> *@
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 
