--- a/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
+++ b/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
@@ -12,10 +12,9 @@
     <link href="SyncfusionDocumentation-WASMVersion.styles.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5-dark.css" rel="stylesheet" />
 
-    @*CDN-version -WORKING
-    <link href="https://cdn.syncfusion.com/blazor/23.1.36/styles/bootstrap5.css" rel="stylesheet" /> *@
-    @*LIBMan NOT WORKING
-    <link href="~/themes/syncfusion/blazor-themes/scss-themes/material-dark.css" rel="stylesheet" /> *@
+    <!-- NPM Version - NOPT WORKING <link href="~/styles/custom.css" rel="stylesheet" />-->
+    <!--@*CDN-version -WORKING <link href="https://cdn.syncfusion.com/blazor/23.1.36/styles/bootstrap5.css" rel="stylesheet" /> *@
+    @*LIBMan NOT WORKING <link href="~/themes/syncfusion/blazor-themes/scss-themes/material-dark.css" rel="stylesheet" /> *@-->
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 
