--- a/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
+++ b/SyncfusionDocumentation-WASMVersion/wwwroot/index.html
@@ -18,7 +18,7 @@
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="e-bigger">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
